--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,20 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a basic Rails Todo application with an API that (hopefully) satisfies the following requirements:
 
-Things you may want to cover:
+*Create a new todo item for a given user with a due date
+*Mark a todo item as complete
+*Retrieve the todo items for a given user
+*Retrieve the incomplete todo items for a given user
 
-* Ruby version
+In addition, the app should meet the following requirements:
 
-* System dependencies
+*All data must be persisted in some manner
+*Both requests and responses must be represented as JSON
 
-* Configuration
+But thankfully:
+*Neither authentication nor authorization are required
 
-* Database creation
+Look to sample_requests.txt for example API calls.
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
